# note_Tools

./: README.md
Airflow/: Dockerfile_10p0p2  README.md  airflow.cfg
Android_CTS/: README.md
Android_Customization/: README.md
Ansible/: README.md
Audacity/: 3Quest_Label.txt  3Quest_dut_Label.txt  3Quest_standmic_Label.txt  3Quest_update_dut_Label.txt  3Quest_update_standmic_Label.txt  README.md
Backend_Tech/: README.md
CMake/: README.md
Cmder/: README.md
Curl/: README.md
DB_NoSQL/: README.md
DB_NoSQL/example_qdrant/: pyproject.toml  qdrant_tutorial01.py  qdrant_tutorial02.py
DB_SQL/: README.md
DB_Time_Series_DB/: Dockerfile_btc_quota  README.md  config_influxdb.json  get_binance.py  grap_taiwan_stock_list.py  init_influxdb.py  inject_stock_prices.py  requirement_btc_quota.txt  requirements.txt  update_influxdb.py
ERP_Odoo/: README.md
Git/: README.md
Google_Drive/: README.md
Google_Sheet/: README.md
Jenkins/: README.md
M$365_E5/: README.md
Markdown/: README.md
Moneyhunter/: README.md
NAS/: README.md
NAS_OpenMediaVault_TrueNAS/: README.md
NAS_WebDAV/: README.md  wsgidav.bat  wsgidav.yaml
Nexus7_ASUS/: README.md
Nginx/: README.md
OpenCV/: 01_test_opencv.py  02_test_opencv.py  03_test_opencv.py  04_face_landmark_sample.py  05_face_landmark_sample2.py  06_face_detector.py  07_real_time_detector.py  08_video_demo.py  20_pixel_info.py  (+30 more)
OpenCV/cpp/: 53_brightness_contrast.cpp  54_histogram-equalization.cpp  55_integral.cpp  56_adaptiveThreshold.cpp  57_otsu.cpp  58_smoothing-blurring.cpp  59_image_pyramid.cpp  60_resize_rect.cpp  61_bgr2hsv.cpp  62_morphology.cpp  63_edge_dection.cpp  64_contour.cpp  64_contour2.cpp  65_contour_area.cpp  66_hu_moments.cpp  66_hu_moments3.cpp  67_hough_line_transform.cpp  67_hough_line_transform2.cpp  67_hough_line_transform3.cpp  68_hough_circle_transform.cpp  69_discrete_fourier_transform.cpp  70_filter.cpp  71_gpu_cuda.cpp  72_colorthresh.cpp  73_npp.cpp  73_npp_time.cpp  73_opencv.cpp  73_opencv_cuda-npp.cpp  73_opencv_time.cpp  73_sample_cuda_memory.cpp  CMakeLists.txt
(+62 files in other folders)
